Np 46410  FetchNviInstitutionReportProxyHandler (#98)
* shouldReturn401WhenUserDoesNotHaveManageNviAccessRight

* validate access rights in handler

* shouldLogRequestingUsersTopLevelOrganization

* shouldExtractAndLogPathParameterReportingYear

* extract and log reportingYear and topLevelOrganization

* code cleanup

* Add endpoint to open api spec

* Update CognitoUserPool

* Add FetchNviInstitutionReportProxyHandler in template

* Mysteriously failing test: add logAppender.stop() in logging tests

* Remove jsonld response
