# docs/openapi.yaml
@@ -221,6 +221,71 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Problem"
+  /institution/nvi-approval/{reportingYear}:
+    get:
+      description: Get institution report for nvi for given reporting year. Supporting text/csv download according to <https://www.rfc-editor.org/rfc/rfc4180>, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet and application/ld+json.
+      security:
+        - CognitoUserPool: [
+          'https://api.nva.unit.no/scopes/backend',
+          'https://api.nva.unit.no/scopes/frontend',
+          'aws.cognito.signin.user.admin'
+        ]
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FetchNviInstitutionReportHandler.Arn}:live/invocations
+        responses: { }
+        httpMethod: POST
+        type: AWS_PROXY
+      parameters:
+        - in: path
+          name: reportingYear
+          description: The reporting year the institutions nvi report should be generated for
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: "OK"
+          content:
+            text/plain:
+              schema:
+                type: string
+                format: string
+              example: |
+                | ------------- | ------------- | ---------------- | 
+                | columnHeader1 | columnHeader2 | columnHeaders... |
+                | ------------- | ------------- | ---------------- |
+                | row1 value1   | row1 value2   | row1 value3      |
+                | row2 value1   | row2 value2   | row2 value3      |
+                | row... value1 | row... value2 | row... value3    |
+                | ------------- | ------------- | ---------------- |
+            text/csv:
+              schema:
+                type: string
+                format: string
+              example: |
+                columnHeader1,columnHeader2,columnHeaders...
+                "row1 value1","row1 value2","row1 value3"
+                "row2 value1","row2 value2","row2 value3"
+                "row... value1","row... value2""row... value3"
+            application/vnd.ms-excel:
+              schema:
+                format: binary
+            application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
+              schema:
+                format: binary
+        '401':
+          description: "Unauthorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        '500':
+          description: "Internal Server Error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Problem"
 components:
   schemas:
     Problem:
